Openapi + formateo fiscales
